# ViralUnknown

./: .gitignore  README.md  build_filter_db.sh  config.yaml  pyproject.toml
viralunknown/: __init__.py  blast.py  cli.py  config.py  pipeline.py  report.py  utils.py
workflow/: Snakefile
workflow/envs/: blast.yaml  flye.yaml  kraken2.yaml  krakentools.yaml  minimap2.yaml  mmseqs2.yaml  multiqc.yaml  spades.yaml
workflow/scripts/: blast_fasta.py  merge_fasta.py
