[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "viralunknown"
version = "0.1.0"
description = "Workflow for detecting unknown viruses in Nanopore data"
authors = [{name = "Baudeau"}]
requires-python = ">=3.9"
dependencies = [
    "pyyaml>=6.0",
    "click>=8.0",
    "jinja2>=3.0",
    "pandas>=2.0",
    "plotly>=5.0",
    "rich>=13.0",
]

[project.scripts]
viralunknown = "viralunknown.cli:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
viralunknown = ["../workflow/**/*"]